--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Log Application</title>
+    <title>Book Collection Tracker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Bibliotheca</h1>
-    </header>
-    <main>
-        <p>Manage your books here.</p>
-    </main>
+    <h1>Book Collection Tracker</h1>
+
+    <div id="book-form">
+        <h2>Add / Edit Book</h2>
+        <input type="hidden" id="book-id" />
+        <label for="title">Title:</label>
+        <input type="text" id="title" placeholder="Book Title">
+        <label for="author">Author:</label>
+        <input type="text" id="author" placeholder="Author Name">
+        <label for="read">Read:</label>
+        <input type="checkbox" id="read">
+        <button id="submit-book">Submit</button>
+    </div>
+
+    <div id="book-list">
+        <h2>Your Books</h2>
+        <ul id="books"></ul>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
